# Conduit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 58b55f773e15_add_conversation_config.py  6e5f61e4029e_initial_models.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  branches.py  chat.py  config.py  conversations.py  files.py  messages.py  router.py  search.py
app/core/: config.py  database.py  exceptions.py  security.py
app/crud/: __init__.py  base.py  crud_config.py  crud_conversation.py  crud_file.py  crud_message.py  crud_user.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  branch.py  common.py  config.py  conversation.py  file.py  message.py  user.py
app/services/: context.py  file_processor.py  llm.py  rag.py
